feat: implement social links management module